--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -489,8 +489,8 @@ reference:
   section:
   - path: /engine/api/
     title: Overview
-  - path: /engine/api/getting-started/
-    title: Getting started
+  - path: /engine/api/get-started/
+    title: Get started
   - path: /engine/api/sdks/
     title: SDKs
   - path: /engine/api/v1.28/
