--- a/_data/ddc_offline_files.yaml
+++ b/_data/ddc_offline_files.yaml
@@ -14,6 +14,8 @@
       url: https://packages.docker.com/caas/ucp_images_2.1.1.tar.gz
     - description: "UCP 2.1.0"
       url: https://packages.docker.com/caas/ucp_images_2.1.0.tar.gz
+    - description: "DTR 2.2.4"
+      url: https://packages.docker.com/caas/dtr-2.2.4.tar.gz
     - description: "DTR 2.2.3"
       url: https://packages.docker.com/caas/dtr-2.2.3.tar.gz
     - description: "DTR 2.2.2"
@@ -28,6 +30,8 @@
       url: https://packages.docker.com/caas/ucp_images_2.0.3.tar.gz
     - description: "UCP 2.0.2"
       url: https://packages.docker.com/caas/ucp_images_2.0.2.tar.gz
+    - description: "DTR 2.1.6"
+      url: https://packages.docker.com/caas/dtr-2.1.6.tar.gz
     - description: "DTR 2.1.5"
       url: https://packages.docker.com/caas/dtr-2.1.5.tar.gz
     - description: "DTR 2.1.4"
