Update cli ref YAML files

--- a/_data/engine-cli/docker_cp.yaml
+++ b/_data/engine-cli/docker_cp.yaml
@@ -45,9 +45,9 @@ long: |-
       - `DEST_PATH` exists and is a file
           - Error condition: cannot copy a directory to a file
       - `DEST_PATH` exists and is a directory
-          - `SRC_PATH` does not end with `/.` (that is: _slash_ followed by _dot_)
+          - `SRC_PATH` does not end with `/.`
               - the source directory is copied into this directory
-          - `SRC_PATH` does end with `/.` (that is: _slash_ followed by _dot_)
+          - `SRC_PATH` does end with `/.`
               - the *content* of the source directory is copied into this
                 directory
 
