--- a/_data/engine-cli/docker_service_update.yaml
+++ b/_data/engine-cli/docker_service_update.yaml
@@ -1,6 +1,15 @@
 command: docker service update
 short: Update a service
-long: Update a service
+long: |-
+  Updates a service as described by the specified parameters. This command has to be run targeting a manager node.
+  The parameters are the same as [`docker service create`](service_create.md). Please look at the description there
+  for further information.
+
+  Normally, updating a service will only cause the service's tasks to be replaced with new ones if a change to the
+  service requires recreating the tasks for it to take effect. For example, only changing the
+  `--update-parallelism` setting will not recreate the tasks, because the individual tasks are not affected by this
+  setting. However, the `--force` flag will cause the tasks to be recreated anyway. This can be used to perform a
+  rolling restart without any changes to the service parameters.
 usage: docker service update [OPTIONS] SERVICE
 pname: docker service
 plink: docker_service.yaml
@@ -38,7 +47,6 @@ options:
   default_value: '[]'
   description: Remove a DNS search domain
 - option: endpoint-mode
-  default_value: vip
   description: Endpoint mode (vip or dnsrr)
 - option: env-add
   default_value: '[]'
@@ -85,7 +93,7 @@ options:
   default_value: "0.000"
   description: Limit CPUs
 - option: limit-memory
-  default_value: "0"
+  default_value: 0 B
   description: Limit Memory
 - option: log-driver
   description: Logging driver for service
@@ -104,16 +112,13 @@ options:
   description: Add or update a published port
 - option: publish-rm
   description: Remove a published port by its target port
-- option: read-only
-  default_value: "false"
-  description: Mount the container's root filesystem as read only
 - option: replicas
   description: Number of tasks
 - option: reserve-cpu
   default_value: "0.000"
   description: Reserve CPUs
 - option: reserve-memory
-  default_value: "0"
+  default_value: 0 B
   description: Reserve Memory
 - option: restart-condition
   description: Restart when condition is met (none, on-failure, or any)
@@ -164,4 +169,82 @@ options:
 - option: workdir
   shorthand: w
   description: Working directory inside the container
+examples: |-
+  ### Update a service
+
+  ```bash
+  $ docker service update --limit-cpu 2 redis
+  ```
+
+  ### Perform a rolling restart with no parameter changes
+
+  ```bash
+  $ docker service update --force --update-parallelism 1 --update-delay 30s redis
+  ```
+
+  In this example, the `--force` flag causes the service's tasks to be shut down
+  and replaced with new ones even though none of the other parameters would
+  normally cause that to happen. The `--update-parallelism 1` setting ensures
+  that only one task is replaced at a time (this is the default behavior). The
+  `--update-delay 30s` setting introduces a 30 second delay between tasks, so
+  that the rolling restart happens gradually.
+
+  ### Add or remove mounts
+
+  Use the `--mount-add` or `--mount-rm` options add or remove a service's bind-mounts
+  or volumes.
+
+  The following example creates a service which mounts the `test-data` volume to
+  `/somewhere`. The next step updates the service to also mount the `other-volume`
+  volume to `/somewhere-else`volume, The last step unmounts the `/somewhere` mount
+  point, effectively removing the `test-data` volume. Each command returns the
+  service name.
+
+  - The `--mount-add` flag takes the same parameters as the `--mount` flag on
+    `service create`. Refer to the [volumes and
+    bind-mounts](service_create.md#volumes-and-bind-mounts-mount) section in the
+    `service create` reference for details.
+
+  - The `--mount-rm` flag takes the `target` path of the mount.
+
+  ```bash
+  $ docker service create \
+      --name=myservice \
+      --mount \
+        type=volume,source=test-data,target=/somewhere \
+      nginx:alpine \
+      myservice
+
+  myservice
+
+  $ docker service update \
+      --mount-add \
+        type=volume,source=other-volume,target=/somewhere-else \
+      myservice
+
+  myservice
+
+  $ docker service update --mount-rm /somewhere myservice
+
+  myservice
+  ```
+
+  ### Add or remove secrets
+
+  Use the `--secret-add` or `--secret-rm` options add or remove a service's
+  secrets.
+
+  The following example adds a secret named `ssh-2` and removes `ssh-1`:
+
+  ```bash
+  $ docker service update \
+      --secret-add source=ssh-2,target=ssh-2 \
+      --secret-rm ssh-1 \
+      myservice
+  ```
+
+  ### Update services using templates
+
+  Some flags of `service update` support the use of templating.
+  See [`service create`](./service_create.md#templating) for the reference.
 
