--- a/_data/engine-cli/docker_diff.yaml
+++ b/_data/engine-cli/docker_diff.yaml
@@ -1,44 +1,29 @@
 command: docker diff
-short: Inspect changes to files or directories on a container's filesystem
+short: Inspect changes on a container's filesystem
 long: |-
   List the changed files and directories in a container᾿s filesystem since the
   container was created. Three different types of change are tracked:
 
-  | Symbol | Description                     |
-  |--------|---------------------------------|
-  | `A`    | A file or directory was added   |
-  | `D`    | A file or directory was deleted |
-  | `C`    | A file or directory was changed |
+  1. `A` - Add
+  2. `D` - Delete
+  3. `C` - Change
 
-  You can use the full or shortened container ID or the container name set using
-  `docker run --name` option.
+  For example:
+
+      $ docker diff 7bb0e258aefe
+
+      C /dev
+      A /dev/kmsg
+      C /etc
+      A /etc/mtab
+      A /go
+      A /go/src
+      A /go/src/github.com
+      A /go/src/github.com/docker
+      A /go/src/github.com/docker/docker
+      A /go/src/github.com/docker/docker/.git
+      ....
 usage: docker diff CONTAINER
 pname: docker
 plink: docker.yaml
-examples: |-
-  Inspect the changes to an `nginx` container:
-
-  ```bash
-  $ docker diff 1fdfd1f54c1b
-
-  C /dev
-  C /dev/console
-  C /dev/core
-  C /dev/stdout
-  C /dev/fd
-  C /dev/ptmx
-  C /dev/stderr
-  C /dev/stdin
-  C /run
-  A /run/nginx.pid
-  C /var/lib/nginx/tmp
-  A /var/lib/nginx/tmp/client_body
-  A /var/lib/nginx/tmp/fastcgi
-  A /var/lib/nginx/tmp/proxy
-  A /var/lib/nginx/tmp/scgi
-  A /var/lib/nginx/tmp/uwsgi
-  C /var/log/nginx
-  A /var/log/nginx/access.log
-  A /var/log/nginx/error.log
-  ```
 
