--- a/_data/engine-cli/docker_run.yaml
+++ b/_data/engine-cli/docker_run.yaml
@@ -80,9 +80,6 @@ options:
 - option: device
   default_value: '[]'
   description: Add a host device to the container
-- option: device-cgroup-rule
-  default_value: '[]'
-  description: Add a rule to the cgroup allowed devices list
 - option: device-read-bps
   default_value: '[]'
   description: Limit read rate (bytes per second) from a device
@@ -160,9 +157,9 @@ options:
   default_value: "0"
   description: Maximum IOps limit for the system drive (Windows only)
 - option: ip
-  description: IPv4 address (e.g., 172.30.100.104)
+  description: Container IPv4 address (e.g. 172.30.100.104)
 - option: ip6
-  description: IPv6 address (e.g., 2001:db8::33)
+  description: Container IPv6 address (e.g. 2001:db8::33)
 - option: ipc
   description: IPC namespace to use
 - option: isolation
@@ -188,7 +185,7 @@ options:
   default_value: '[]'
   description: Log driver options
 - option: mac-address
-  description: Container MAC address (e.g., 92:d0:c6:0a:29:33)
+  description: Container MAC address (e.g. 92:d0:c6:0a:29:33)
 - option: memory
   shorthand: m
   description: Memory limit
@@ -254,8 +251,7 @@ options:
   default_value: '[]'
   description: Security Options
 - option: shm-size
-  default_value: "0"
-  description: Size of /dev/shm
+  description: Size of /dev/shm, default value is 64MB
 - option: sig-proxy
   default_value: "true"
   description: Proxy received signals to the process
@@ -683,7 +679,6 @@ examples: |-
   ### Add host device to container (--device)
 
   ```bash
-  {% raw %}
   $ docker run --device=/dev/sdc:/dev/xvdc \
                --device=/dev/sdd --device=/dev/zero:/dev/nulo \
                -i -t \
@@ -692,7 +687,6 @@ examples: |-
   brw-rw---- 1 root disk 8, 2 Feb  9 16:05 /dev/xvdc
   brw-rw---- 1 root disk 8, 3 Feb  9 16:05 /dev/sdd
   crw-rw-rw- 1 root root 1, 5 Feb  9 16:05 /dev/nulo
-  {% endraw %}
   ```
 
   It is often necessary to directly expose devices to a container. The `--device`
@@ -776,10 +770,8 @@ examples: |-
   flags for IPv4 address retrieval for a network device named `eth0`:
 
   ```bash
-  {% raw %}
   $ HOSTIP=`ip -4 addr show scope global dev eth0 | grep inet | awk '{print \$2}' | cut -d / -f 1`
   $ docker run  --add-host=docker:${HOSTIP} --rm -it debian
-  {% endraw %}
   ```
 
   For IPv6 use the `-6` flag instead of the `-4` flag. For other network
@@ -849,45 +841,38 @@ examples: |-
   ### Specify isolation technology for container (--isolation)
 
   This option is useful in situations where you are running Docker containers on
-  Windows. The `--isolation <value>` option sets a container's isolation technology.
-  On Linux, the only supported is the `default` option which uses
+  Microsoft Windows. The `--isolation <value>` option sets a container's isolation
+  technology. On Linux, the only supported is the `default` option which uses
   Linux namespaces. These two commands are equivalent on Linux:
 
-  ```bash
+  ```
   $ docker run -d busybox top
   $ docker run -d --isolation default busybox top
   ```
 
-  On Windows, `--isolation` can take one of these values:
+  On Microsoft Windows, can take any of these values:
 
 
-  | Value     | Description                                                                                |
-  |-----------|--------------------------------------------------------------------------------------------|
-  | `default` | Use the value specified by the Docker daemon's `--exec-opt` or system default (see below). |
-  | `process` | Shared-kernel namespace isolation (not supported on Windows client operating systems).     |
-  | `hyperv`  | Hyper-V hypervisor partition-based isolation.                                              |
+  | Value     | Description                                                                                                                                                   |
+  |-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+  | `default` | Use the value specified by the Docker daemon's `--exec-opt` . If the `daemon` does not specify an isolation technology, Microsoft Windows uses `process` as its default value.  |
+  | `process` | Namespace isolation only.                                                                                                                                     |
+  | `hyperv`   | Hyper-V hypervisor partition-based isolation.                                                                                                                  |
 
-  The default isolation on Windows server operating systems is `process`. The default (and only supported)
-  isolation on Windows client operating systems is `hyperv`. An attempt to start a container on a client
-  operating system with `--isolation process` will fail.
-
-  On Windows server, assuming the default configuration, these commands are equivalent
-  and result in `process` isolation:
-
-  ```PowerShell
-  PS C:\> docker run -d microsoft/nanoserver powershell echo process
-  PS C:\> docker run -d --isolation default microsoft/nanoserver powershell echo process
-  PS C:\> docker run -d --isolation process microsoft/nanoserver powershell echo process
+  On Windows, the default isolation for client is `hyperv`, and for server is
+  `process`. Therefore when running on Windows server without a `daemon` option
+  set, these two commands are equivalent:
+  ```
+  $ docker run -d --isolation default busybox top
+  $ docker run -d --isolation process busybox top
   ```
 
-  If you have set the `--exec-opt isolation=hyperv` option on the Docker `daemon`, or
-  are running against a Windows client-based daemon, these commands are equivalent and
-  result in `hyperv` isolation:
+  If you have set the `--exec-opt isolation=hyperv` option on the Docker `daemon`,
+  if running on Windows server, any of these commands also result in `hyperv` isolation:
 
-  ```PowerShell
-  PS C:\> docker run -d microsoft/nanoserver powershell echo hyperv
-  PS C:\> docker run -d --isolation default microsoft/nanoserver powershell echo hyperv
-  PS C:\> docker run -d --isolation hyperv microsoft/nanoserver powershell echo hyperv
+  ```
+  $ docker run -d --isolation default busybox top
+  $ docker run -d --isolation hyperv busybox top
   ```
 
   ### Configure namespaced kernel parameters (sysctls) at runtime
