--- a/_data/engine-cli/docker_service_create.yaml
+++ b/_data/engine-cli/docker_service_create.yaml
@@ -305,12 +305,82 @@ examples: |-
   The following table describes options which apply to both bind-mounts and named
   volumes in a service:
 
-  | Option                                   | Required                  | Description
-  |:-----------------------------------------|:--------------------------|:-----------------------------------------------------------------------------------------
-  | **type**                                 |                           | The type of mount, can be either `volume`, `bind`, or `tmpfs`. Defaults to `volume` if no type is specified.<ul><li>`volume`: mounts a [managed volume](volume_create.md) into the container.</li><li>`bind`: bind-mounts a directory or file from the host into the container.</li><li>`tmpfs`: mount a tmpfs in the container</li></ul>
-  | **src** or **source**                    | for `type=bind`&nbsp;only | <ul><li>`type=volume`: `src` is an optional way to specify the name of the volume (for example, `src=my-volume`). If the named volume does not exist, it is automatically created. If no `src` is specified, the volume is assigned a random name which is guaranteed to be unique on the host, but may not be unique cluster-wide. A randomly-named volume has the same lifecycle as its container and is destroyed when the *container* is destroyed (which is upon `service update`, or when scaling or re-balancing the service).</li><li>`type=bind`: `src` is required, and specifies an absolute path to the file or directory to bind-mount (for example, `src=/path/on/host/`).  An error is produced if the file or directory does not exist.</li><li>`type=tmpfs`: `src` is not supported.</li></ul>
-  | **dst** or **destination** or **target** | yes                       | Mount path inside the container, for example `/some/path/in/container/`. If the path does not exist in the container's filesystem, the Engine creates a directory at the specified location before mounting the volume or bind-mount.
-  | **readonly** or **ro**                   |                           | The Engine mounts binds and volumes `read-write` unless `readonly` option is given when mounting the bind or volume.<br /><br /><ul><li>`true` or `1` or no value: Mounts the bind or volume read-only.</li><li>`false` or `0`: Mounts the bind or volume read-write.</li></ul>
+  <table>
+    <tr>
+      <th>Option</th>
+      <th>Required</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td><b>types</b></td>
+      <td></td>
+      <td>
+        <p>The type of mount, can be either <tt>volume</tt>, <tt>bind</tt>, or <tt>tmpfs</tt>. Defaults to <tt>volume</tt> if no type is specified.
+        <ul>
+          <li><tt>volume</tt>: mounts a [managed volume](volume_create.md) into the container.</li>
+          <li><tt>bind</tt>: bind-mounts a directory or file from the host into the container.</li>
+          <li><tt>tmpfs</tt>: mount a tmpfs in the container</li>
+        </ul></p>
+      </td>
+    </tr>
+    <tr>
+      <td><b>src</b> or <b>source</b></td>
+      <td>for <tt>type=bind</tt> only></td>
+      <td>
+        <ul>
+          <li>
+           <tt>type=volume</tt>: <tt>src</tt> is an optional way to specify the name of the volume (for example, <tt>src=my-volume</tt>).
+            If the named volume does not exist, it is automatically created. If no <tt>src</tt> is specified, the volume is
+            assigned a random name which is guaranteed to be unique on the host, but may not be unique cluster-wide.
+            A randomly-named volume has the same lifecycle as its container and is destroyed when the <i>container</i>
+            is destroyed (which is upon <tt>service update</tt>, or when scaling or re-balancing the service)
+          </li>
+          <li>
+            <tt>type=bind</tt>: <tt>src</tt> is required, and specifies an absolute path to the file or directory to bind-mount
+            (for example, <tt>src=/path/on/host/</tt>). An error is produced if the file or directory does not exist.
+          </li>
+          <li>
+            <tt>type=tmpfs</tt>: <tt>src</tt> is not supported.
+          </li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td><p><b>dst</b> or <b>destination</b> or <b>target</b></p></td>
+      <td>yes</td>
+      <td>
+        <p>Mount path inside the container, for example <tt>/some/path/in/container/</tt>.
+        If the path does not exist in the container's filesystem, the Engine creates
+        a directory at the specified location before mounting the volume or bind-mount.</p>
+      </td>
+    </tr>
+    <tr>
+      <td><p><b>readonly</b> or <b>ro</b></p></td>
+      <td></td>
+      <td>
+        <p>The Engine mounts binds and volumes <tt>read-write</tt> unless <tt>readonly</tt> option
+        is given when mounting the bind or volume.
+        <ul>
+          <li><tt>true</tt> or <tt>1</tt> or no value: Mounts the bind or volume read-only.</li>
+          <li><tt>false</tt> or <tt>0</tt>: Mounts the bind or volume read-write.</li>
+        </ul></p>
+      </td>
+    </tr>
+    <tr>
+      <td><b>consistency</b></td>
+      <td></td>
+      <td>
+        <p>The consistency requirements for the mount; one of
+           <ul>
+             <li><tt>default</tt>: Equivalent to <tt>consistent</tt>.</li>
+             <li><tt>consistent</tt>: Full consistency.  The container runtime and the host maintain an identical view of the mount at all times.</li>
+             <li><tt>cached</tt>: The host's view of the mount is authoritative.  There may be delays before updates made on the host are visible within a container.</li>
+             <li><tt>delegated</tt>: The container runtime's view of the mount is authoritative.  There may be delays before updates made in a container are are visible on the host.</li>
+          </ul>
+       </p>
+      </td>
+    </tr>
+  </table>
 
   #### Bind Propagation
 
@@ -352,20 +422,76 @@ examples: |-
   #### Options for Named Volumes
   The following options can only be used for named volumes (`type=volume`);
 
-  | Option                | Description
-  |:----------------------|:--------------------------------------------------------------------------------------------------------------------
-  | **volume-driver**     | Name of the volume-driver plugin to use for the volume. Defaults to ``"local"``, to use the local volume driver to create the volume if the volume does not exist.
-  | **volume-label**      | One or more custom metadata ("labels") to apply to the volume upon creation. For example, `volume-label=mylabel=hello-world,my-other-label=hello-mars`. For more information about labels, refer to [apply custom metadata](https://docs.docker.com/engine/userguide/labels-custom-metadata/).
-  | **volume-nocopy**     | By default, if you attach an empty volume to a container, and files or directories already existed at the mount-path in the container (`dst`), the Engine copies those files and directories into the volume, allowing the host to access them. Set `volume-nocopy` to disables copying files from the container's filesystem to the volume and mount the empty volume.<br /><br />A value is optional:<ul><li>`true` or `1`: Default if you do not provide a value. Disables copying.</li><li>`false` or `0`: Enables copying.</li></ul>
-  | **volume-opt**        | Options specific to a given volume driver, which will be passed to the driver when creating the volume. Options are provided as a comma-separated list of key/value pairs, for example, `volume-opt=some-option=some-value,some-other-option=some-other-value`. For available options for a given driver, refer to that driver's documentation.
+  <table>
+    <tr>
+      <th>Option</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td><b>volume-driver</b></td>
+      <td>
+        <p>Name of the volume-driver plugin to use for the volume. Defaults to
+        <tt>"local"</tt>, to use the local volume driver to create the volume if the
+        volume does not exist.</p>
+      </td>
+    </tr>
+    <tr>
+      <td><b>volume-label</b></td>
+      <td>
+        One or more custom metadata ("labels") to apply to the volume upon
+        creation. For example,
+        `volume-label=mylabel=hello-world,my-other-label=hello-mars`. For more
+        information about labels, refer to
+        <a href="https://docs.docker.com/engine/userguide/labels-custom-metadata/">apply custom metadata</a>.
+      </td>
+    </tr>
+    <tr>
+      <td><b>volume-nocopy</b></td>
+      <td>
+        By default, if you attach an empty volume to a container, and files or
+        directories already existed at the mount-path in the container (<tt>dst</tt>),
+        the Engine copies those files and directories into the volume, allowing
+        the host to access them. Set `volume-nocopy` to disables copying files
+        from the container's filesystem to the volume and mount the empty volume.
+
+        A value is optional:
+
+        <ul>
+          <li><tt>true</tt> or <tt>1</tt>: Default if you do not provide a value. Disables copying.</li>
+          <li><tt>false</tt> or <tt>0</tt>: Enables copying.</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td><b>volume-opt</b></td>
+      <td>
+        Options specific to a given volume driver, which will be passed to the
+        driver when creating the volume. Options are provided as a comma-separated
+        list of key/value pairs, for example,
+        <tt>volume-opt=some-option=some-value,volume-opt=some-other-option=some-other-value</tt>.
+        For available options for a given driver, refer to that driver's
+        documentation.
+      </td>
+    </tr>
+  </table>
 
   #### Options for tmpfs
   The following options can only be used for tmpfs mounts (`type=tmpfs`);
 
-  | Option                | Description
-  |:----------------------|:--------------------------------------------------------------------------------------------------------------------
-  | **tmpfs-size**        | Size of the tmpfs mount in bytes. Unlimited by default in Linux.
-  | **tmpfs-mode**        | File mode of the tmpfs in octal. (e.g. `"700"` or `"0700"`.) Defaults to ``"1777"`` in Linux.
+  <table>
+    <tr>
+      <th>Option</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td><b>tmpfs-size</b></td>
+      <td>Size of the tmpfs mount in bytes. Unlimited by default in Linux.</td>
+    </tr>
+    <tr>
+      <td><b>tmpfs-mode</b></td>
+      <td>File mode of the tmpfs in octal. (e.g. <tt>"700"</tt> or <tt>"0700"</tt>.) Defaults to <tt>"1777"</tt> in Linux.</td>
+    </tr>
+  </table>
 
   #### Differences between "--mount" and "--volume"
 
