Update cli ref YAML files (#2789)
* Update cli ref YAML files

* Fix typo

* Backport fixes to the service_create tables

--- a/_data/engine-cli/docker_build.yaml
+++ b/_data/engine-cli/docker_build.yaml
@@ -172,8 +172,7 @@ options:
   default_value: '[]'
   description: Security options
 - option: shm-size
-  default_value: "0"
-  description: Size of /dev/shm
+  description: Size of /dev/shm, default value is 64MB
 - option: squash
   default_value: "false"
   description: Squash newly built layers into a single new layer
@@ -259,7 +258,7 @@ examples: |-
   This sends the URL `http://server/ctx.tar.gz` to the Docker daemon, which
   downloads and extracts the referenced tarball. The `-f ctx/Dockerfile`
   parameter specifies a path inside `ctx.tar.gz` to the `Dockerfile` that is used
-  to build the image. Any `ADD` commands in that `Dockerfile` that refers to local
+  to build the image. Any `ADD` commands in that `Dockerfile` that refer to local
   paths must be relative to the root of the contents inside `ctx.tar.gz`. In the
   example above, the tarball contains a directory `ctx/`, so the `ADD
   ctx/container.cfg /` operation works as expected.
@@ -331,7 +330,6 @@ examples: |-
   ```bash
   $ docker build -t whenry/fedora-jboss:latest -t whenry/fedora-jboss:v2.1 .
   ```
-
   ### Specify a Dockerfile (-f)
 
   ```bash
