--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -129,42 +129,20 @@ guides:
     title: Docker release notes
 - sectiontitle: Get Started
   section:
-  - path: /learn/
-    title: Learn Docker
-  - sectiontitle: Docker basics
+  - sectiontitle: "Get started with Docker"
     section:
-    - path: /engine/getstarted/
-      title: Get started with Docker
-    - path: /engine/getstarted/step_one/
-      title: Install Docker and run hello-world
-    - path: /engine/getstarted/step_two/
-      title: Understand images &amp; containers
-    - path: /engine/getstarted/step_three/
-      title: Find &amp; run the whalesay image
-    - path: /engine/getstarted/step_four/
-      title: Build your own image
-    - path: /engine/getstarted/step_five/
-      title: Create a Docker Hub account &amp; repository
-    - path: /engine/getstarted/step_six/
-      title: Tag, push, &amp; pull your image
-    - path: /engine/getstarted/last_page/
-      title: Learning more
-  - sectiontitle: Define and deploy your app
-    section:
-    - path: /engine/getstarted-voting-app/
-      title: Sample app overview
-    - path: /engine/getstarted-voting-app/node-setup/
-      title: Set up Dockerized machines
-    - path: /engine/getstarted-voting-app/create-swarm/
-      title: Create a swarm
-    - path: /engine/getstarted-voting-app/deploy-app/
-      title: Deploy the app
-    - path: /engine/getstarted-voting-app/test-drive/
-      title: Try out the voting app
-    - path: /engine/getstarted-voting-app/customize-app/
-      title: Customize the app and redeploy
-    - path: /engine/getstarted-voting-app/cleanup/
-      title: Graceful shutdown, reboot, and clean-up
+    - title: "Part 1: Orientation"
+      path: /get-started/
+    - title: "Part 2: Containers"
+      path: /get-started/part2/
+    - title: "Part 3: Services"
+      path: /get-started/part3/
+    - title: "Part 4: Swarms"
+      path: /get-started/part4/
+    - title: "Part 5: Stacks"
+      path: /get-started/part5/
+    - title: "Part 6: Deploy your app"
+      path: /get-started/part6/
   - sectiontitle: Learn by example
     section:
     - path: /engine/tutorials/networkingcontainers/
@@ -175,8 +153,8 @@ guides:
     title: Docker overview
 - sectiontitle: User Guide
   section:
-  - path: /engine/userguide/intro/
-    title: Introduction
+  - path: /engine/userguide/
+    title: Overview
   - sectiontitle: Work with images
     section:
     - path: /engine/userguide/eng-image/dockerfile_best-practices/
