--- a/_data/glossary.yaml
+++ b/_data/glossary.yaml
@@ -295,8 +295,9 @@ volume: |
 
   - A **host volume** lives on the Docker host's filesystem and can be accessed from within the container.  
 
-  - An **anonymous volume** is useful for when you would rather have Docker handle where the files are stored.
-    It can be difficult, however, to refer to the same volume over time when it is an anonymous volumes.
+  - A **named volume** is a volume which Docker manages where on disk the volume is created,
+    but it is given a name.
 
-  - A **named volume** is similar to an anonymous volume. Docker manages where on disk the volume is created,
-    but you give it a volume name.
+  - An **anonymous volume** is similar to a named volume, however, it can be difficult, to refer to
+    the same volume over time when it is an anonymous volumes. Docker handle where the files are stored.
+    
