--- a/_data/glossary.yaml
+++ b/_data/glossary.yaml
@@ -150,6 +150,11 @@ Kitematic: |
   A legacy GUI, bundled with [Docker Toolbox](#toolbox), for managing Docker
   containers. We recommend upgrading to [Docker for Mac](#docker-for-mac) or
   [Docker for Windows](#docker-for-windows/), which have superseded Kitematic.
+layer: |
+  *layer* or *layers* on a Docker image are modifications applied to a base image. Every 
+  executable line in Dockerfile creates a modification on base image. Each such modification is 
+  stored as a *layer* which is cached and reused for same base image. The layer format of docker images
+  helps in reducing the storage space on the host and faster portability.
 libcontainer: |
   libcontainer provides a native Go implementation for creating containers with
   namespaces, cgroups, capabilities, and filesystem access controls. It allows
@@ -170,6 +175,12 @@ Machine: |
   installs Docker on them, then configures the Docker client to talk to them.
 
   *Also known as : docker-machine*
+namespace: |
+   [namespace](http://man7.org/linux/man-pages/man7/namespaces.7.html) is a Linux kernel feature that isolates
+   and vitualizes system resources. Processes which are part of a namespace, can only see the changes to the 
+   resources in namespaces they are part of. Processes belonging to different namespace cannot see the changes 
+   in another container. This is one of the founding blocks of the linux containers. There are different types of 
+   namespaces that allow different capabilities to container.
 node: |
   A [node](/engine/swarm/how-swarm-mode-works/nodes/) is a physical or virtual
   machine running an instance of the Docker Engine in swarm mode.
