Modifies `docker network create`
Resolves #1481

--- a/_data/engine-cli/docker_network_create.yaml
+++ b/_data/engine-cli/docker_network_create.yaml
@@ -103,6 +103,10 @@ examples: |-
   If you want to add a container to a network after the container is already
   running, use the `docker network connect` subcommand.
 
+  ``bash
+      $ docker network connect mynet mycontainer
+      ```
+
   You can connect multiple containers to the same network. Once connected, the
   containers can communicate using only another container's IP address or name.
   For `overlay` networks or custom plugins that support multi-host connectivity,
@@ -111,6 +115,10 @@ examples: |-
 
   You can disconnect a container from a network using the `docker network
   disconnect` command.
+
+   ```bash
+    $ docker network disconnect mynet mycontainer
+    ```
 
   ### Specify advanced options
 
@@ -196,3 +204,6 @@ examples: |-
   to create an externally isolated `overlay` network, you can specify the
   `--internal` option.
 
+  ```bash
+  $ docker network create --driver overlay  --internal my-network
+  ```
